--- a/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
+++ b/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
@@ -1121,7 +1121,7 @@
                                                         <constraint firstAttribute="height" constant="1" id="8bu-0Q-3HZ"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y6d-6h-ZXF">
+                                                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y6d-6h-ZXF">
                                                     <rect key="frame" x="67" y="-41" width="240" height="128"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="WKz-RX-tLX"/>
