--- a/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
+++ b/goSellSDK/Core/UI/Internal/Resources/Payment.storyboard
@@ -2173,13 +2173,6 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ApplePayMark" translatesAutoresizingMaskIntoConstraints="NO" id="SIS-Er-ZnC">
                                         <rect key="frame" x="149.66666666666666" y="455.66666666666669" width="76" height="50"/>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68b-dv-ff0">
-                                        <rect key="frame" x="20" y="720" width="335" height="50"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="CeD-Vd-9jd"/>
-                                        </constraints>
-                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ztm-kQ-DxY">
                                         <rect key="frame" x="56" y="56" width="53" height="53"/>
                                         <constraints>
@@ -2191,17 +2184,27 @@
                                             <action selector="cancelButtonClicked:" destination="4c4-RH-WPa" eventType="touchUpInside" id="uqS-ty-dBS"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nr8-1N-dXb">
+                                        <rect key="frame" x="84" y="730" width="207" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="RGR-lc-fhu"/>
+                                            <constraint firstAttribute="width" secondItem="nr8-1N-dXb" secondAttribute="height" multiplier="207:40" id="hTx-iI-tTp"/>
+                                        </constraints>
+                                        <state key="normal" image="ApplePaySetUp"/>
+                                        <connections>
+                                            <action selector="setupApplePayClicked:" destination="4c4-RH-WPa" eventType="touchUpInside" id="0OA-HO-Gfy"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="L5L-Hm-7K8" firstAttribute="centerY" secondItem="1LO-nX-glP" secondAttribute="centerY" id="2SA-uD-Tgf"/>
-                                    <constraint firstAttribute="trailing" secondItem="68b-dv-ff0" secondAttribute="trailing" constant="20" id="7OQ-g2-qQz"/>
+                                    <constraint firstItem="nr8-1N-dXb" firstAttribute="centerX" secondItem="1LO-nX-glP" secondAttribute="centerX" id="5VA-hh-yrm"/>
                                     <constraint firstItem="4HX-iU-Tgv" firstAttribute="height" secondItem="1LO-nX-glP" secondAttribute="height" id="Do7-aM-H0N"/>
                                     <constraint firstAttribute="trailing" secondItem="4HX-iU-Tgv" secondAttribute="trailing" id="JHf-hv-DlB"/>
                                     <constraint firstItem="3Kf-5Z-Wrx" firstAttribute="top" secondItem="1LO-nX-glP" secondAttribute="top" id="MmJ-9p-b8P"/>
                                     <constraint firstItem="L5L-Hm-7K8" firstAttribute="leading" secondItem="1LO-nX-glP" secondAttribute="leading" constant="20" id="OCf-Vc-gLA"/>
                                     <constraint firstItem="SIS-Er-ZnC" firstAttribute="centerX" secondItem="1LO-nX-glP" secondAttribute="centerX" id="QWn-v1-Qqy"/>
-                                    <constraint firstItem="68b-dv-ff0" firstAttribute="leading" secondItem="1LO-nX-glP" secondAttribute="leading" constant="20" id="RHh-IK-Ps8"/>
                                     <constraint firstItem="L5L-Hm-7K8" firstAttribute="centerX" secondItem="1LO-nX-glP" secondAttribute="centerX" id="U1w-sG-TSN"/>
                                     <constraint firstItem="4HX-iU-Tgv" firstAttribute="top" secondItem="1LO-nX-glP" secondAttribute="top" id="UEk-AM-0Ck"/>
                                     <constraint firstItem="ztm-kQ-DxY" firstAttribute="top" secondItem="1LO-nX-glP" secondAttribute="top" constant="56" id="VcZ-yj-zM5"/>
@@ -2212,7 +2215,7 @@
                                     <constraint firstItem="4HX-iU-Tgv" firstAttribute="leading" secondItem="1LO-nX-glP" secondAttribute="leading" id="eoQ-Na-41W"/>
                                     <constraint firstItem="ztm-kQ-DxY" firstAttribute="leading" secondItem="1LO-nX-glP" secondAttribute="leading" constant="56" id="f0U-RC-Y5D"/>
                                     <constraint firstAttribute="trailing" secondItem="3Kf-5Z-Wrx" secondAttribute="trailing" id="r6X-fp-d40"/>
-                                    <constraint firstAttribute="bottom" secondItem="68b-dv-ff0" secondAttribute="bottom" constant="42" id="x6q-R7-yt9"/>
+                                    <constraint firstAttribute="bottom" secondItem="nr8-1N-dXb" secondAttribute="bottom" constant="42" id="wvW-am-V9c"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -2224,9 +2227,6 @@
                             <constraint firstItem="1LO-nX-glP" firstAttribute="top" secondItem="1o6-MO-4OL" secondAttribute="top" id="pNP-6q-5JD"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="applePayButtonContentView" destination="68b-dv-ff0" id="IhT-np-we6"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0J-1c-fqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2235,6 +2235,7 @@
     </scenes>
     <resources>
         <image name="ApplePayMark" width="76" height="50"/>
+        <image name="ApplePaySetUp" width="424" height="76"/>
         <image name="SetupApplePaySplash" width="375" height="812"/>
         <image name="ic_close" width="18" height="18"/>
     </resources>
